# bra-interface

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  run.py
bra_interface/: bulletins.py  connection.py  maps.py  massif_coord_gps.pkl  utils.py
bra_interface/scripts/: coord_reader.py
static/: calendar.css  calendar.js  style.css
static/css/: style.css
templates/: index.html
